--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^28.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "trello": "^0.11.0"
   }
 }
